--- a/src/main/resources/templates/userPanel.html
+++ b/src/main/resources/templates/userPanel.html
@@ -13,14 +13,12 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark p-0">
     <div class="container-fluid">
         <div class="text-white">
-            <span><strong th:text="${user.getUsername()}"></strong></span>
+            <span><strong id="headerUsername"></strong></span>
             <span> with roles: </span>
-            <span th:each="role :${user.getRoles()}">
-              <span th:text="${role}"></span>
-            </span>
+            <span id="headerUserRoles"></span>
         </div>
 
         <div class="nav navbar-nav navbar-right">
@@ -28,20 +26,19 @@
         </div>
     </div>
 </nav>
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-2 mt-3 px-0">
-            <ul class="nav flex-column nav-pills">
+            <ul class="nav flex-column nav-pills" role="tablist">
                 <li><a class="nav-link active" href="#User" role="tab" data-toggle="pill" aria-selected="true">User</a>
                 </li>
             </ul>
         </div>
 
-
         <div class="col-10 bg-light" style="height: 100vh">
             <div class="container mt-3">
                 <div class="tab-content">
+
                     <div role="tabpanel" class="tab-pane fade show active" id="User">
                         <div class="page-header">
                             <h2>User information-page</h2>
@@ -57,19 +54,8 @@
                                     <th scope="col">Role</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr>
-                                    <td th:text="${user.getId()}"></td>
-                                    <td th:text="${user.getUsername()}"></td>
-                                    <td th:text="${user.getFirstName()}"></td>
-                                    <td th:text="${user.getLastName()}"></td>
-                                    <td th:text="${user.getEmail()}"></td>
-                                    <td>
-                                        <span th:each="role :${user.getRoles()}">
-                                          <span th:text="${role}"></span>
-                                        </span>
-                                    </td>
-                                </tr>
+                                <tbody id="userInfoId">
+
                                 </tbody>
                             </table>
                         </div>
@@ -91,5 +77,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script src="/user.js"></script>
 </body>
 </html>
